--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -1,8 +1,10 @@
 $c-white: #FFF;
 $c-black: #000;
-$c-green: #00BBBA;
+$c-teal: #00BBBA;
 $f-aktiv: 'aktiv-grotesk', Helvetica, Arial, sans-serif;
 $f-freight: 'freight-text-pro', Helvetica, Arial, sans-serif;
+$animation-function: cubic-bezier(.497, .51, .25, 1) !default;
+$animation-delay: 350ms !default;
 
 body {
     font-family: $f-aktiv;
@@ -15,4 +17,15 @@ body {
 
 .freight {
     font-family: $f-freight;
+}
+
+
+
+//
+// animatable
+//
+.animatable{
+   transition-timing-function:$animation-function;
+   transition-duration: $animation-delay;
+   transition-property: all;
 }
