--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -2,3 +2,50 @@ body {
     background: black;
     color: white;
 }
+.cFooter {
+    text-align: center;
+    &-info {
+        border-top:1px solid #00BBBA;
+        border-bottom:1px solid #00BBBA;
+        padding: 30px 0;
+    }
+    &-input {
+        width: 20%;
+        padding: 10px;
+    }
+    &-btn {
+        padding: 11px;
+        width: 15%;
+        background-color: #00BBBA;
+        color: white;
+        border: 1px solid #00BBBA;
+    }
+    &-linkList {
+        display: flex;
+        justify-content: space-evenly;
+        width: 70%;
+        margin: auto;
+    }
+    &-link {
+        &.blue {
+            color: #00BBBA;
+            text-decoration: none;
+        }
+        &.white {
+            color: white;
+            text-decoration: none;
+        }
+    }
+    &-subsection-inner {
+        display: flex;
+    }
+    &-sublinkList {
+        margin: auto;
+        display: flex;
+        justify-content: space-between;
+        width: 40%;
+    }
+}
+.chevron-right {
+    fill: #00BBBA;
+}
