--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,51 +1,61 @@
 body {
-    background: black;
-    color: white;
+    background: $c-black;
+    color: $c-white;
 }
 .cFooter {
     text-align: center;
     &-info {
-        border-top:1px solid #00BBBA;
-        border-bottom:1px solid #00BBBA;
+        border-top:1px solid $c-teal;
+        border-bottom:1px solid $c-teal;
         padding: 30px 0;
     }
     &-input {
-        width: 20%;
+        width: 30%;
         padding: 10px;
+        margin:10px 0;
     }
     &-btn {
         padding: 11px;
         width: 15%;
-        background-color: #00BBBA;
-        color: white;
-        border: 1px solid #00BBBA;
+        background-color: $c-teal;
+        color: $c-white;
+        border: 1px solid $c-teal;
     }
     &-linkList {
         display: flex;
         justify-content: space-evenly;
         width: 70%;
         margin: auto;
+        margin-bottom: 20px;
     }
     &-link {
         &.blue {
-            color: #00BBBA;
+            color: $c-teal;
             text-decoration: none;
         }
         &.white {
-            color: white;
+            color: $c-white;
             text-decoration: none;
         }
     }
     &-subsection-inner {
         display: flex;
+        justify-content: space-evenly;
+        margin: auto;
+    }
+    &-subtext {
+        margin-bottom: 20px;
     }
     &-sublinkList {
-        margin: auto;
+        margin: auto 0;
         display: flex;
         justify-content: space-between;
         width: 40%;
     }
+    .content {
+        width: 50%;
+    }
 }
 .chevron-right {
-    fill: #00BBBA;
+    fill: $c-teal;
 }
