--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -7,6 +7,9 @@ body {
     &-title {
         font-size: 40px;
     }
+    &-subtitle {
+        font-size: 20px;
+    }
     &-info {
         border-top:1px solid $c-teal;
         border-bottom:1px solid $c-teal;
@@ -35,10 +38,24 @@ body {
         &.blue {
             color: $c-teal;
             text-decoration: none;
+            transition: 0.3s ease-in-out;
+            letter-spacing: 1.67px;
+            font-size:15px;
+            &:hover {
+                color: $c-white;
+            }
         }
         &.white {
-            color: $c-white;
+            color: #FFF;
             text-decoration: none;
+            display: flex;
+            line-height: 0.8;
+            transition: 0.3s ease-in-out;
+            letter-spacing: 1.67px;
+            font-size: 20px;
+            &:hover {
+                color: $c-teal;
+            }
         }
     }
     &-subsection-inner {
@@ -59,9 +76,13 @@ body {
     }
     &-footnote {
         color: grey;
-        font-size: 0.7rem;
+        font-size: 13px;
+        letter-spacing: 1.67px;
     }
 }
 .chevron-right {
-    fill: $c-teal;
+    fill: #00BBBA;
+    font-size: 2px;
+    height: 50px;
+    width: 65px;
 }
