--- a/src/scss/components/_homeheader.scss
+++ b/src/scss/components/_homeheader.scss
@@ -2,20 +2,40 @@
   &-bg {
     height: 595px;
     background-size: cover;
+    // display: inline-block;
   }
   &-inner {
     position: absolute;
-    top: 40%;
+    // max-width:1340px;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 90%;
+    @media (max-width: 1024px) {
+      top: 45%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 90%;
+    }
+    @media (max-width: 1024px) {
+      top:43%;
+    }
   }
   &-title {
     width: 60%;
     font-size: 40px;
+    @media (max-width: 768px) {
+      width:100%
+    }
+    @media (max-width: 425px) {
+      font-size: 25px;
+    }
   }
   &-subtitle {
     width: 30%;
     font-size: 20px;
+    @media (max-width: 768px) {
+      width:60%
+    }
   }
 }
