--- a/src/scss/components/_homeheader.scss
+++ b/src/scss/components/_homeheader.scss
@@ -1,35 +1,32 @@
 .cHomeHeader {
+  position: relative;
+  min-height:  50vh;
+  display:flex;
+  flex-direction: column;
   &-bg {
-    height: 595px;
-    background-size: cover;
-    // display: inline-block;
+    position:absolute;
+    top:0;
+    left:0;
+    bottom:0;
+    right:0;
+    background-size: contain;
+    background-position: right center;
+    background-repeat:no-repeat;
+    background-color:#00051b;
+    z-index:2;
+
   }
   &-inner {
-    position: absolute;
-    // max-width:1340px;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 90%;
-    @media (max-width: 1024px) {
-      top: 45%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 90%;
-    }
-    @media (max-width: 1024px) {
-      top:43%;
-    }
+    position:relative;
+    z-index:3;
+    width:90%;
+    max-width:1240px;
+    margin:auto;
+    padding:35px 0;
   }
   &-title {
-    width: 60%;
-    font-size: 40px;
-    @media (max-width: 768px) {
-      width:100%
-    }
-    @media (max-width: 425px) {
-      font-size: 25px;
-    }
+    max-width:460px;
+    font-size:20px;
   }
   &-subtitle {
     width: 30%;
