--- a/src/scss/components/_homeslider.scss
+++ b/src/scss/components/_homeslider.scss
@@ -4,22 +4,39 @@
   display:flex;
   flex-direction: column;
   &-inner {
-    position:relative;
-    z-index:3;
-    width:90%;
-    max-width:1240px;
-    margin:auto;
-    padding:35px 0;
+    width: 90%;
+    display: flex;
+    max-width: 1240px;
+    margin: auto;
+    padding: 35px 0;
+  }
+  &-text{
+    width: 50%;
+    margin-right: 10%;
   }
   &-title {
     max-width:460px;
     font-size:20px;
   }
   &-subtitle {
-    width: 30%;
     font-size: 20px;
-    @media (max-width: 768px) {
-      width:60%
-    }
+  }
+  img {
+    width: 50%;
+  }
+  &-buttons {
+    display: flex;
+  }
+  &-btn {
+    color: $c-white;
+    background-color: $c-teal;
+    width: 48%;
+    font-size: 15px;
+    letter-spacing: 1px;
+    margin-right: 2%;
+    padding: 20px 30px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
   }
 }
