--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -3,12 +3,19 @@ body {
     color: $c-white;
 }
 .cFooter {
+    padding:45px 0;
     text-align: center;
     &-title {
-        font-size: 40px;
+        @extend .title;
     }
     &-subtitle {
+        font-family: $f-aktiv;
+        font-weight: lighter;
+        margin:15px 0;
         font-size: 20px;
+        color: #FFFFFF;
+        letter-spacing: 1.67px;
+        text-align: center;
     }
     &-info {
         border-top:1px solid $c-teal;
@@ -16,9 +23,9 @@ body {
         padding: 30px 0;
     }
     &-input {
-        width: 30%;
-        padding: 10px;
-        margin:10px 0;
+        width: 60%;
+        padding: 15px 25px;
+        margin:0;
         @media (max-width: 425px) {
             width: 60%;
             margin:0;
@@ -26,10 +33,17 @@ body {
     }
     &-btn {
         padding: 11px;
-        width: 15%;
+        width: 40%;
+        padding: 22px 0;
         background-color: $c-teal;
         color: $c-white;
         border: 1px solid $c-teal;
+        font-family: $f-aktiv;
+        font-weight: bold;
+        line-height: 0;
+        font-size: 15px;
+        letter-spacing: 1px;
+        text-align: center;
         @media (max-width: 425px) {
             width: 30%;
         }
@@ -40,9 +54,10 @@ body {
         }
     }
     form {
-        max-width: 1340px;
-        margin: auto;
-        width:100%;
+        max-width: 540px;
+        margin: 25px auto;
+        width:90%;
+        display: flex;
     }
     &-linkList {
         display: flex;
@@ -58,14 +73,34 @@ body {
             text-align: center;
             width: 100%;
         }
+        a {
+            font-family: $f-aktiv;
+            font-weight: lighter;
+            font-size: 20px;
+            letter-spacing: 1.67px;
+            white-space: nowrap;
+        }
+        img {
+            @extend .animatable;
+            margin-left:5px;
+            width:40px;
+            height:40px;
+            margin:5px 0 0 5px;
+        }
+        a:hover {
+            img {
+                transform:translateX(2px);
+            }
+        }
     }
     &-link {
         &.blue {
             color: $c-teal;
             text-decoration: none;
-            transition: 0.3s ease-in-out;
-            letter-spacing: 1.67px;
-            font-size:15px;
+            @extend .animatable;
+            letter-spacing: 0;
+            font-size:20px;
+            font-weight: lighter;
             &:hover {
                 color: $c-white;
             }
@@ -103,13 +138,21 @@ body {
     &-subsection-inner {
         display: flex;
         margin: auto;
+        padding: 25px 0;
         max-width: 1340px;
         @media (max-width: 1024px) {
             justify-content: space-evenly;
+            flex-direction: column;
+            align-items: center;
+            >:first-child {
+                display: none;
+            }
         }
     }
     &-subtext {
-        margin-bottom: 20px;
+        margin:10px 0  25px 0;
+        font-weight: bold;
+        font-size: 20px;
     }
     &-sublinkList {
         margin: auto 0;
@@ -117,9 +160,24 @@ body {
         justify-content: space-between;
         width: 45%;
         flex-wrap: wrap;
-        @media (max-width: 425px) {
-            margin:30px;
+        >a {
+            font-family: $f-aktiv;
+            font-weight: lighter;
+            font-size: 15px;
+            color: #00B4B4;
+            letter-spacing: 1.67px;
             text-align: center;
+        }
+        @media (max-width: 768px) {
+            margin:0 auto;;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            >a {
+                display: block;
+                text-align: center;
+                margin:12px auto;
+            }
         }
     }
     .content {
@@ -133,8 +191,8 @@ body {
         font-size: 13px;
         letter-spacing: 1.67px;
     }
-    .chevron-right {
-        height: 55px;
-        width: 50px;
-    }
+    // .chevron-right {
+    //     height: 55px;
+    //     width: 50px;
+    // }
 }
