--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -62,6 +62,7 @@ body {
             // font-size:35px;
             line-height: 2;
             text-align: right;
+            margin-left:0;
         }
         &:hover {
             color:$c-white;
