--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -20,7 +20,7 @@ body {
     &-info {
         border-top:1px solid $c-teal;
         border-bottom:1px solid $c-teal;
-        padding: 30px 0;
+        padding: 50px 0 30px 0;
     }
     &-input {
         width: 60%;
