--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -23,5 +23,6 @@
 @import 'components/navbar';
 @import 'components/team';
 @import 'components/footer';
+@import 'components/page';
 @import 'components/homeheader';
 @import 'components/homeslider';
