--- a/src/scss/components/_team.scss
+++ b/src/scss/components/_team.scss
@@ -110,7 +110,9 @@
             font-size: 15px;
             color: $c-white;;
             letter-spacing: 0;
-            
+            a {
+                color:currentColor;
+            }
         }
         &-links {
             margin:12px 0;
@@ -119,6 +121,7 @@
             }
             a{
                 display: inline-block;
+                margin-right:10px;
                 @extend .animatable;
                 &:hover {
                     transform:translateY(-2px);
