--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -13,6 +13,10 @@
         text-align: center;
     }
 }
+
+.subtitle {
+    font-weight: bold;
+}
 .f-text {
     font-family: $f-freight;
     font-weight: lighter;
