--- a/src/scss/components/_page.scss
+++ b/src/scss/components/_page.scss
@@ -29,6 +29,9 @@
                 line-height: 20px;
             }
         }
+        strong {
+            font-weight: bold;
+        }
         p {
             margin: 0 0 15px 0;
             @media(max-width: 768px) {
