--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -155,6 +155,9 @@ body {
         margin: auto;
         padding: 25px 0;
         max-width: 1340px;
+        img {
+            max-width: 189px;
+        }
         @media (max-width: 1024px) {
             justify-content: space-evenly;
             flex-direction: column;
