--- a/src/scss/components/_page.scss
+++ b/src/scss/components/_page.scss
@@ -16,13 +16,15 @@
         margin-top:35px;
         font-size: 16px;
         line-height: 20px;
-        font-family: $f-aktiv;
-        font-weight: lighter;
+        font-family: 'aktiv-grotesk-thin';
+        font-weight: 200;
         a {
             color:currentColor;
         }
         h2 {
             margin: 25px 0 15px 0;
+            font-family: $f-aktiv;
+
             @extend .subtitle;
             @media(max-width: 768px) {
                 font-size:15px;
@@ -31,6 +33,8 @@
         }
         strong {
             font-weight: bold;
+            font-family: $f-aktiv;
+
         }
         p {
             margin: 0 0 15px 0;
