--- a/src/scss/components/_team.scss
+++ b/src/scss/components/_team.scss
@@ -106,7 +106,7 @@
         }
         &-text {
             font-family: $f-freight;
-            font-weight: light;
+            font-weight: lighter;
             font-size: 15px;
             color: $c-white;;
             letter-spacing: 0;
