Footer fixes, team fixes

--- a/src/scss/components/_team.scss
+++ b/src/scss/components/_team.scss
@@ -110,6 +110,7 @@
             font-size: 15px;
             color: $c-white;;
             letter-spacing: 0;
+            line-height: 20px;
             a {
                 color:currentColor;
             }
