--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -74,20 +74,20 @@ body {
     }
     &-linkList {
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-between;
         width: 70%;
         margin: auto;
         margin-bottom: 20px;
-        max-width: 1020px;
+        max-width: 940px;
         flex-wrap: wrap;
         overflow: hidden;
         @media (max-width: 425px) {
             margin: auto;
             text-align: center;
-            width: 100%;
         }
         @media (max-width: 1024px) {
             font-size:16px;
+            width: 90%;
         }
         a {
             font-family: $f-aktiv;
@@ -147,8 +147,8 @@ body {
         }
         &-wrapper {
             text-align: center;
-            max-width:100px;
-            margin:auto;
+            // max-width:100px;
+            margin:auto 0;
             @media (max-width: 425px) {
                 width: 33.333%;
             }
@@ -160,10 +160,10 @@ body {
         padding: 25px 0;
         max-width: 1340px;
         img {
-            max-width: 189px;
+            max-width: 170px;
         }
         @media (max-width: 1024px) {
-            justify-content: space-evenly;
+            justify-content: space-between;
             flex-direction: column;
             align-items: center;
             >:first-child {
