--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -2,7 +2,7 @@ $c-white: #FFF;
 $c-black: #000;
 $c-teal: #00BBBA;
 $f-aktiv: 'aktiv-grotesk', Helvetica, Arial, sans-serif;
-$f-freight: 'freight-text-pro', Helvetica, Arial, sans-serif;
+$f-freight: freight-text-pro, serif, 'freight-text-pro', Helvetica, Arial, sans-serif;
 $animation-function: cubic-bezier(.497, .51, .25, 1) !default;
 $animation-delay: 350ms !default;
 
