--- a/src/scss/components/_homeheader.scss
+++ b/src/scss/components/_homeheader.scss
@@ -33,16 +33,15 @@
     padding:35px 0;
   }
   &-title, &-title {
-    max-width:460px;
+    // max-width:460px;
     @extend .title;
   }
   &-subtitle {
     // width: 30%;
     max-width: 480px;
-    font-size: 16px;
+    font-size: 20px;
     font-family: $f-freight;
-    font-weight: 100;
-    font-size: 16px;
+    font-weight: 300;
     color: $c-white;;
     letter-spacing: 0;
     @extend .f-text;
@@ -55,6 +54,8 @@
       text-align: center;
       font-family: $f-freight;
       font-weight: 100;
+      margin-right:auto;
+      margin-left:auto;
     }
   }
 }
