Lighter font, actually just more transparent

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -26,7 +26,7 @@ body {
     font-size: 16px;
     line-height: 20px;
     letter-spacing: 0;
-    
+    opacity:0.8;
 }
 @import 'components/navbar';
 @import 'components/team';
