--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -11,7 +11,7 @@ body {
     }
     &-subtitle {
         font-family: $f-aktiv; 
-        font-weight: lighter;
+        font-weight: 100;
         font-family: 'aktiv-grotesk-thin';
         font-weight: 200;
         margin:15px 0;
@@ -91,7 +91,7 @@ body {
         }
         a {
             font-family: $f-aktiv;
-            font-weight: lighter;
+            font-weight: 100;
             font-size: 18px;
             letter-spacing: 1.67px;
             white-space: nowrap;
@@ -119,7 +119,7 @@ body {
             @extend .animatable;
             letter-spacing: 0;
             font-size:18px;
-            font-weight: lighter;
+            font-weight: 100;
             &:hover {
                 color: $c-white;
             }
@@ -191,7 +191,7 @@ body {
         flex-wrap: wrap;
         >a {
             font-family: $f-aktiv;
-            font-weight: lighter;
+            font-weight: 100;
             font-size: 15px;
             color: #00B4B4;
             letter-spacing: 1.67px;
