--- a/src/scss/components/_team.scss
+++ b/src/scss/components/_team.scss
@@ -106,7 +106,8 @@
         }
         &-text {
             font-family: $f-freight;
-            font-weight: lighter;
+            opacity:0.8;
+            font-weight: 300;
             font-size: 15px;
             color: $c-white;;
             letter-spacing: 0;
@@ -134,6 +135,7 @@
 
 
 .cJobs {
+    margin-top:45px;
     border-top: 1px solid $c-teal;
     &-inner {
         @extend .cTeam-inner;
