--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -36,6 +36,7 @@ body {
         width: 60%;
         padding: 15px 25px;
         margin:0;
+        border-radius:0;
         @media (max-width: 425px) {
             width: 60%;
             margin:0;
@@ -54,6 +55,9 @@ body {
         font-size: 15px;
         letter-spacing: 1px;
         text-align: center;
+        appearance: none;
+        -webkit-appearance: none;
+        border-radius:0;
         // @media (max-width: 425px) {
             // width: 30%;
         // }
