--- a/src/scss/components/_team.scss
+++ b/src/scss/components/_team.scss
@@ -39,7 +39,7 @@
         display: flex;
         flex-grow:0;
         flex-shrink: 0;
-        margin:0;
+        margin:0 0 15px 0;
         @media(max-width: 940px) {
             width:100%;
             text-align: center;
